# api-rust-example

./: .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose-develop.yml  docker-compose-tests.yml  docker-compose.yml
config/: default.toml  development.toml  tests.toml
migrations/: 20230418001048_tables.up.sql
src/: main.rs
src/application/: db.rs  errors.rs  logger.rs  mod.rs  settings.rs
src/domains/: mod.rs
src/domains/article/: mod.rs
src/domains/user/: mod.rs
src/handlers/article/: mod.rs
src/handlers/user/: mod.rs
src/repositories/article/: mod.rs
src/repositories/user/: mod.rs
