[package]
name = "api-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["json", "tracing", "macros"] }
#axum-extra = { version = "0.10.0-alpha.1" }
#axum-test = "16.3"
tokio = { version = "1.43.1", features = ["full"] }
tower-http = { version = "0.6", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0"
serde_json = "1.0.137"
validator = { version = "0.20", features = ["derive"] }
config = "0.15"
dotenvy = "0.15"
lazy_static = "1.5.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }
serde = { version = "1.0.217", features = ["derive"] }
hyper = { version = "1.5", features = ["full"] }
http-body-util = "0.1"
log = "0.4.25"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

