[package]
name = "api-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8", features = ["json", "tracing", "macros"] }
#axum-extra = { version = "0.9.0" }
axum-test = "13"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
config = "0.13"
lazy_static = "1.4.0"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }
serde = { version = "1.0.193", features = ["derive"] }
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client", "http1", "client-legacy"] }
futures-core = "0.3.29"
mime = "0.3.17"
http-body-util = "0.1.0"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
assert-json-diff = "2.0.2"
reqwest = { version = "0.11.22", features = ["json"] }
pretty_assertions = "1.4.0"

